# raylib-bulletHell

./: imgui.ini  readme.md
BulletHell1/.obsidian/: workspace.json
BulletHell1_Obsidian/: Game.canvas  Welcome.md
BulletHell1_Obsidian/.obsidian/: appearance.json  workspace.json
BulletHell1_Obsidian/.obsidian/.obsidian/: workspace.json
game/: CMakeLists.txt
game/include/: IAmmoBehavior.h  IBulletBehavior.h  IBulletModifier.h  IBulletRenderer.h  IColorBehavior.h  IGunBehavior.h  IGunEffect.h  IShootBehaviour.h  ammoBehaviors.h  audioBit.h  bullet.h  bulletBehaviors.h  bulletModifiers.h  bulletRenderers.h  colorBehaviors.h  com_comps.h  command.h  enemy.h  entity.h  entityManager.h  gun.h  gunBehaviors.h  gunEffects.h  player.h  settings.h  settingsRenderer.h  shaderBuffer.h  shaderManager.h  shootBehaviours.h
game/shaders/: trailBufferA.fs  trailImage.fs
game/sounds/: gunEx1.vcv
game/src/: ammoBehaviors.cpp  bullet.cpp  bulletBehaviors.cpp  bulletModifiers.cpp  bulletRenderers.cpp  colorBehaviors.cpp  com_comps.cpp  enemy.cpp  entMan.cpp  entityManager.cpp  gun.cpp  gunBehaviors.cpp  gunEffects.cpp  main.cpp  player.cpp  shaderBuffer.cpp  shootBehaviours.cpp
